<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/my_schedule"
        app:showAsAction="never"
        android:title="@string/my_schedule" />

    <item
        android:id="@+id/list"
        app:showAsAction="never"
        android:title="@string/list" />

    <item
    android:id="@+id/schedule_settings"
    app:showAsAction="never"
    android:title="@string/schedule_settings" />

    <item
        android:id="@+id/share"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share" />

    <item
        android:id="@+id/save"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save" />



</menu>